--- a/indexPROSIPE.html
+++ b/indexPROSIPE.html
@@ -29,13 +29,11 @@
             </form>
             <div class="recuperar">
                 <a href="esqueci.html">
-                    <p>Esqueci minha senha</p>
+                    Esqueci minha senha
                 </a>
             </div>
             <div class="botao">
-                <a href=telaPROSIPE.html>
-                    <p> Conectar-se </p>
-                </a>
+                <a href=telaPROSIPE.html>Conectar-se</a>
             </div>
             
         </div>
@@ -50,13 +48,6 @@
             <p> Todos os direitos reservados a <a target="_blank" href="https://exatoconsultoria.com">Exato Consultoria
                     ©</a></p>
         </div>
-    </div>
-
-    <!--
-        Background do municipio
-    -->
-    <div class="bgImage">
-        <img src="imagens/Mossoro.jpg" alt="">
     </div>
     <div class="suporte">
         <abbr title="Fale com o Suporte">
