--- a/forgetPass.html
+++ b/forgetPass.html
@@ -17,15 +17,11 @@
             <p class="conta">Entre com sua conta</p>
         </div>
         <div>
-            <form class="login">
-                <p>
-                    E-mail
-                </p> <abbr title="Digite seu E-mail">
-                    <input type="text"> </abbr>
-                <p> Você receberá um E-mail com o passo a passo <br> para redefinir sua senha </p>
-                <p>
+            <form class="recuperarLogin">
+                <p> E-mail </p>
+                <abbr title="Digite seu E-mail"> <input type="text"> </abbr>
             </form>
-            <div class="botao">
+            <div class="botaoRecuperar">
                 <a href=>Recuperar</a>
             </div>
         </div>
@@ -36,7 +32,7 @@
             Copyright
         -->
 
-        <div class="direitos">
+        <div class="direitos2">
             <p> Todos os direitos reservados a <a target="_blank" href="https://exatoconsultoria.com">Exato Consultoria
                     ©</a></p>
         </div>
