--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
                     <input type="password"> </abbr>
             </form>
             <div class="recuperar">
-                <a href="forgetPass.html">
-                    Esqueci minha senha
-                </a>
+                <a href="forgetPass.html">Esqueci minha senha</a>
             </div>
             <div class="botao">
                 <a href=telaPROSIPE.html>Conectar-se</a>
@@ -45,8 +43,7 @@
         -->
 
         <div class="direitos">
-            <p> Todos os direitos reservados a <a target="_blank" href="https://exatoconsultoria.com">Exato Consultoria
-                    ©</a></p>
+            <p> Todos os direitos reservados a <a target="_blank" href="https://exatoconsultoria.com"> Exato Consultoria ©</a></p>
         </div>
     </div>
     <div class="suporte">
