--- a/telaPROSIPE.html
+++ b/telaPROSIPE.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Imagens/favicon/favicon.ico" type="image/x-icon" />
 </head>
-<body>
-    <img src="Imagens/tela.png" alt="">
+<body class="bgPrint">
 </body>
 </html>
