--- a/forgetPass.html
+++ b/forgetPass.html
@@ -18,6 +18,7 @@
         </div>
         <div>
             <form class="recuperarLogin">
+                <h5> <a class="aLink" href="index.html">Voltar</a> </h5>
                 <p> E-mail </p>
                 <abbr title="Digite seu E-mail"> <input type="text"> </abbr>
             </form>
