--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="bgWhite">
         <div>
-            <a target="_blank" href="https://www.prosipe.com"><img class="logo" src="imagens/logoazul.png"
+            <a target="_blank" rel="noopener noreferrer" href="https://www.prosipe.com"><img class="logo" src="imagens/logoazul.png"
                     alt="Não encontrada"></a>
             <p class="conta">Entre com sua conta</p>
         </div>
@@ -43,12 +43,12 @@
         -->
 
         <div class="direitos">
-            <p> Todos os direitos reservados a <a target="_blank" href="https://exatoconsultoria.com"> Exato Consultoria ©</a></p>
+            <p> Todos os direitos reservados a <a rel="noopener noreferrer" target="_blank" href="https://exatoconsultoria.com"> Exato Consultoria ©</a></p>
         </div>
     </div>
     <div class="suporte">
         <abbr title="Fale com o Suporte">
-            <a target="_blank" href="https://api.whatsapp.com/send?phone=558496570443&text=Ola%20Suporte"><img
+            <a rel="noopener noreferrer" target="_blank" href="https://api.whatsapp.com/send?phone=558496570443&text=Ola%20Suporte"><img
                     src="imagens/suporte.png" alt=""></a> </abbr>
     </div>
 </body>
