--- a/forgetPass.html
+++ b/forgetPass.html
@@ -12,7 +12,7 @@
 <body>
     <div class="bgWhite">
         <div>
-            <a target="_blank" href="https://www.prosipe.com"><img class="logo" src="imagens/logoazul.png"
+            <a rel="noopener noreferrer" target="_blank" href="https://www.prosipe.com"><img class="logo" src="imagens/logoazul.png"
                     alt="Não encontrada"></a>
             <p class="conta">Entre com sua conta</p>
         </div>
@@ -34,14 +34,14 @@
         -->
 
         <div class="direitos2">
-            <p> Todos os direitos reservados a <a target="_blank" href="https://exatoconsultoria.com">Exato Consultoria
+            <p> Todos os direitos reservados a <a rel="noopener noreferrer" target="_blank" href="https://exatoconsultoria.com">Exato Consultoria
                     ©</a></p>
         </div>
     </div>
 
     <div class="suporte">
         <abbr title="Fale com o Suporte">
-            <a target="_blank" href="https://api.whatsapp.com/send?phone=558496570443&text=Ola%20Suporte"><img
+            <a rel="noopener noreferrer" target="_blank" href="https://api.whatsapp.com/send?phone=558496570443&text=Ola%20Suporte"><img
                     src="imagens/suporte.png" alt=""></a> </abbr>
     </div>
 </body>
